@@ -3,7 +3,11 @@ package io.ronghuiye.minispring.test;
 import io.ronghuiye.minispring.beans.factory.config.BeanDefinition;
 import io.ronghuiye.minispring.beans.factory.support.DefaultListableBeanFactory;
 import io.ronghuiye.minispring.test.bean.UserService;
+import net.sf.cglib.proxy.Enhancer;
+import net.sf.cglib.proxy.NoOp;
 import org.junit.Test;
+
+import java.lang.reflect.Constructor;
 
 public class ApiTest {
 
@@ -14,10 +18,38 @@ public class ApiTest {
         BeanDefinition beanDefinition = new BeanDefinition(UserService.class);
         beanFactory.registerBeanDefinition("userService", beanDefinition);
 
-        UserService userService = (UserService) beanFactory.getBean("userService");
+        UserService userService = (UserService) beanFactory.getBean("userService", "ryan");
         userService.queryUserInfo();
 
-        UserService userService_singleton = (UserService) beanFactory.getSingleton("userService");
-        userService_singleton.queryUserInfo();
+    }
+//need to add vm arg(--add-opens java.base/java.lang=ALL-UNNAMED) in java18
+    @Test
+    public void test_cglib() {
+        Enhancer enhancer = new Enhancer();
+        enhancer.setSuperclass(UserService.class);
+        enhancer.setCallback(new NoOp() {
+            @Override
+            public int hashCode() {
+                return super.hashCode();
+            }
+        });
+        Object obj = enhancer.create(new Class[]{String.class}, new Object[]{"ryan"});
+        System.out.println(obj);
+    }
+
+    @Test
+    public void test_parameterTypes() throws Exception {
+        Class<UserService> beanClass = UserService.class;
+        Constructor<?>[] declaredConstructors = beanClass.getDeclaredConstructors();
+        Constructor<?> constructor = null;
+        for (Constructor<?> ctor : declaredConstructors) {
+            if (ctor.getParameterTypes().length == 1) {
+                constructor = ctor;
+                break;
+            }
+        }
+        Constructor<UserService> declaredConstructor = beanClass.getDeclaredConstructor(constructor.getParameterTypes());
+        UserService userService = declaredConstructor.newInstance("ryan");
+        System.out.println(userService);
     }
 }
